Added assimp models

--- a/src/bin/vviewer/CMakeLists.txt
+++ b/src/bin/vviewer/CMakeLists.txt
@@ -11,18 +11,24 @@ project(${NAME})
 # Configuration
 set(CMAKE_AUTOMOC ON)
 
+include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${INTERNAL_LIBRARIES_ROOT})
 include_directories(${QT_INCLUDE_DIRS})
 include_directories(${VULKAN_INCLUDE_DIRS})
 include_directories(${UTILS_INCLUDE_DIRS})
 include_directories(${GLM_INCLUDE_DIRS})
 include_directories(${STB_INCLUDE_DIRS})
+include_directories(${ASSIMP_INCLUDE_DIRS})
 
 # Sources
 file(GLOB ${NAME}_HEADERS *.hpp)
 file(GLOB ${NAME}_SOURCES *.cpp)
 file(GLOB ${NAME}_MATH_HEADERS math/*.hpp)
 file(GLOB ${NAME}_MATH_SOURCES math/*.cpp)
+file(GLOB ${NAME}_MODELS_HEADERS models/*.hpp)
+file(GLOB ${NAME}_MODELS_SOURCES models/*.cpp)
+file(GLOB ${NAME}_CORE_HEADERS core/*.hpp)
+file(GLOB ${NAME}_CORE_SOURCES core/*.cpp)
 file(GLOB ${NAME}_RESOURCES *.qrc)
 QT5_ADD_RESOURCES(${NAME}_RESOURCES_RCC ${${NAME}_RESOURCES})
 
@@ -30,11 +36,14 @@ QT5_ADD_RESOURCES(${NAME}_RESOURCES_RCC ${${NAME}_RESOURCES})
 add_executable(${NAME} ${GUI_TYPE} 
 	${${NAME}_HEADERS} ${${NAME}_SOURCES} 
 	${${NAME}_MATH_HEADERS} ${${NAME}_MATH_SOURCES}
+	${${NAME}_MODELS_HEADERS} ${${NAME}_MODELS_SOURCES}
+	${${NAME}_CORE_HEADERS} ${${NAME}_CORE_SOURCES}
 	${${NAME}_RESOURCES_RCC}
 	)
 
 # Libraries
-target_link_libraries(${NAME} ${QT_LIBRARIES} ${VULKAN_LIBRARIES} ${UTILS_LIBRARIES})
+target_link_libraries(${NAME} ${QT_LIBRARIES} ${VULKAN_LIBRARIES} ${UTILS_LIBRARIES} ${ASSIMP_LIBRARIES})
 
-source_group("math\\Headers"		FILES	${${NAME}_MATH_HEADERS})
-source_group("math\\Sources"		FILES	${${NAME}_MATH_SOURCES})
+source_group("math\\"		FILES	${${NAME}_MATH_HEADERS} ${${NAME}_MATH_SOURCES})
+source_group("models\\"			FILES	${${NAME}_MODELS_HEADERS} ${${NAME}_MODELS_SOURCES})
+source_group("core\\"			FILES	${${NAME}_CORE_HEADERS} ${${NAME}_CORE_SOURCES})
