--- a/src/bin/vviewer/CMakeLists.txt
+++ b/src/bin/vviewer/CMakeLists.txt
@@ -31,6 +31,8 @@ file(GLOB ${NAME}_CORE_HEADERS core/*.hpp)
 file(GLOB ${NAME}_CORE_SOURCES core/*.cpp)
 file(GLOB ${NAME}_VULKAN_HEADERS vulkan/*.hpp)
 file(GLOB ${NAME}_VULKAN_SOURCES vulkan/*.cpp)
+file(GLOB ${NAME}_UI_HEADERS UI/*.hpp)
+file(GLOB ${NAME}_UI_SOURCES UI/*.cpp)
 file(GLOB ${NAME}_RESOURCES *.qrc)
 QT5_ADD_RESOURCES(${NAME}_RESOURCES_RCC ${${NAME}_RESOURCES})
 
@@ -41,6 +43,7 @@ add_executable(${NAME} ${GUI_TYPE}
 	${${NAME}_MODELS_HEADERS} ${${NAME}_MODELS_SOURCES}
 	${${NAME}_CORE_HEADERS} ${${NAME}_CORE_SOURCES}
 	${${NAME}_VULKAN_HEADERS} ${${NAME}_VULKAN_SOURCES}
+	${${NAME}_UI_HEADERS} ${${NAME}_UI_SOURCES}
 	${${NAME}_RESOURCES_RCC}
 	)
 
@@ -51,3 +54,4 @@ source_group("math\\"		FILES	${${NAME}_MATH_HEADERS} ${${NAME}_MATH_SOURCES})
 source_group("models\\"		FILES	${${NAME}_MODELS_HEADERS} ${${NAME}_MODELS_SOURCES})
 source_group("core\\"		FILES	${${NAME}_CORE_HEADERS} ${${NAME}_CORE_SOURCES})
 source_group("vulkan\\"		FILES	${${NAME}_VULKAN_HEADERS} ${${NAME}_VULKAN_SOURCES})
+source_group("UI\\"		FILES	${${NAME}_UI_HEADERS} ${${NAME}_UI_SOURCES})
