--- a/src/bin/vviewer/CMakeLists.txt
+++ b/src/bin/vviewer/CMakeLists.txt
@@ -1,15 +1,14 @@
-cmake_minimum_required(VERSION 3.0)
+cmake_minimum_required(VERSION 3.16)
 
 set(PROJECT_ROOT ${CMAKE_SOURCE_DIR})
-include(${PROJECT_ROOT}/src/lib/SetupEnvironment.cmake)
-SetupEnvironment()
 
-# Project
 set(NAME "vviewer")
 project(${NAME})
 
-# Configuration
 set(CMAKE_AUTOMOC ON)
+
+include(${PROJECT_ROOT}/src/lib/SetupEnvironment.cmake)
+SetupEnvironment()
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${INTERNAL_LIBRARIES_ROOT})
@@ -34,7 +33,7 @@ file(GLOB ${NAME}_VULKAN_SOURCES vulkan/*.cpp)
 file(GLOB ${NAME}_UI_HEADERS UI/*.hpp)
 file(GLOB ${NAME}_UI_SOURCES UI/*.cpp)
 file(GLOB ${NAME}_RESOURCES *.qrc)
-QT5_ADD_RESOURCES(${NAME}_RESOURCES_RCC ${${NAME}_RESOURCES})
+#QT5_ADD_RESOURCES(${NAME}_RESOURCES_RCC ${${NAME}_RESOURCES})
 
 # Target
 add_executable(${NAME} ${GUI_TYPE} 
@@ -47,6 +46,8 @@ add_executable(${NAME} ${GUI_TYPE}
 	${${NAME}_RESOURCES_RCC}
 	)
 
+target_compile_features(${NAME} PRIVATE cxx_std_17)
+    
 # Libraries
 target_link_libraries(${NAME} ${QT_LIBRARIES} ${VULKAN_LIBRARIES} ${UTILS_LIBRARIES} ${ASSIMP_LIBRARIES})
 
@@ -55,4 +56,4 @@ source_group("math\\"		FILES	${${NAME}_MATH_HEADERS} ${${NAME}_MATH_SOURCES})
 source_group("models\\"		FILES	${${NAME}_MODELS_HEADERS} ${${NAME}_MODELS_SOURCES})
 source_group("core\\"		FILES	${${NAME}_CORE_HEADERS} ${${NAME}_CORE_SOURCES})
 source_group("vulkan\\"		FILES	${${NAME}_VULKAN_HEADERS} ${${NAME}_VULKAN_SOURCES})
-source_group("UI\\"		    FILES	${${NAME}_UI_HEADERS} ${${NAME}_UI_SOURCES})
+source_group("UI\\"		FILES	${${NAME}_UI_HEADERS} ${${NAME}_UI_SOURCES})
