--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "src/lib/external/glm"]
 	path = src/lib/external/glm
 	url = https://github.com/g-truc/glm.git
+[submodule "src/lib/external/rapidjson"]
+	path = src/lib/external/rapidjson
+	url = https://github.com/Tencent/rapidjson.git
