--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ add_subdirectory(src/lib)
 # Build shaders
 message("Building shaders...")
 if(MSVC)
-    execute_process(COMMAND "./compile.bat" WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/src/bin/vviewer/shaders/)
+    execute_process(COMMAND "compile.bat" WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/src/bin/vviewer/shaders/)
 elseif(UNIX)
     execute_process(COMMAND "./compile.sh" WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/src/bin/vviewer/shaders/)
 endif()
