--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -6,3 +6,6 @@ endif()
 ### UTILS ###
 add_subdirectory(utils)
 add_subdirectory(external/zip)
+
+set(TBB_TEST OFF)
+add_subdirectory(external/oneTBB)
