--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -5,8 +5,8 @@ endif()
 add_subdirectory(debug_tools)
 add_subdirectory(external/zip)
 
-set(TBB_TEST OFF)
-add_subdirectory(external/oneTBB)
+#set(TBB_TEST OFF)
+#add_subdirectory(external/oneTBB)
 
 add_subdirectory(vengine)
 
